# pinterest-downloader

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
pinterest-cli/: Cargo.toml
pinterest-cli/src/: main.rs
pinterest-core/: Cargo.toml
pinterest-core/src/: downloader.rs  lib.rs
pinterest-dl/: Cargo.toml
pinterest-dl-core/: Cargo.toml
pinterest-dl-core/src/: downloader.rs  output.rs
pinterest-dl-gui/: Cargo.toml
pinterest-dl-gui/src/: main.rs
pinterest-dl-gui/src/ui/: app.rs  mod.rs  render.rs  state.rs  theme.rs  widgets.rs
pinterest-dl/src/: main.rs
pinterest-gui/: Cargo.toml
pinterest-gui/src/ui/: app.rs  render.rs  state.rs
src/: downloader.rs  icons.rs  lib.rs  main.rs  output.rs  ui.rs
src/ui/: app.rs  mod.rs  render.rs  state.rs  widgets.rs
