[package]
name = "pinterest_downloader"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "gui"
path = "src/bin/gui.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
eframe = "0.35.0"
egui_extras = { version = "0.35.0", features = ["svg"] }
rfd = "0.15.4"
ureq = { version = "2.12.1", features = ["tls"] }
regex = "1.11.1"

[dev-dependencies]
tiny_http = "0.12"
