[package]
name = "pinterest-dl-core"
version = "0.1.2"
edition = "2024"
description = "Core download logic for PinterestDownloader — URL extraction, file download, and event system"
license = "MIT"
repository = "https://github.com/pedrogiudici/pinterest-downloader"
keywords = ["pinterest", "download", "video", "scraper"]
categories = ["command-line-utilities", "multimedia"]
readme = "../README.md"

[dependencies]
ureq = { version = "2.12.1", features = ["tls"] }
regex = "1.11.1"

[dev-dependencies]
tiny_http = "0.12"
