[package]
name = "pinterest-dl"
version = "0.1.0"
edition = "2024"
description = "CLI for PinterestDownloader — download Pinterest videos from the terminal"
license = "MIT"
repository = "https://github.com/pedrogiudici/pinterest-downloader"
keywords = ["pinterest", "download", "video", "scraper", "cli"]
categories = ["command-line-utilities", "multimedia"]
readme = "../README.md"

[dependencies]
pinterest-dl-core = { version = "0.1.0", path = "../pinterest-dl-core" }
